--- a/html1.html
+++ b/html1.html
@@ -6,6 +6,7 @@
 <body>
 <p>HTML stands for Hyper Text Markup Language. It is used for creating web pages. It describes the structure of a web page. </p>
 <p>An HTML element tell the brower how to display the content. An element is defined by a start tag, some content and an end tag. 
-There are two types of tags:- empty tag and container tag.</p>
+There are two types of tags:- empty tag and container tag. HTML comments are not displayed in the browser, but they can help document your 
+HTML source code. Syntax to add comment are <!-- write comment here--></p>
 </body>
 </html>
