--- a/html1.html
+++ b/html1.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Understanding of HTML</title>
+	<title>Purvesha Kshirsagar</title>
 </head>
 <body>
+<h1>Purvesha Kshirsagar</h1>
+<h2>Jabalpur Engineering College</h2>
+<h3>Information Technology (IT)</h3>
 <p>HTML stands for Hyper Text Markup Language. It is used for creating web pages. It describes the structure of a web page. </p>
 <p>An HTML element tell the brower how to display the content. An element is defined by a start tag, some content and an end tag. 
 There are two types of tags:- empty tag and container tag. HTML comments are not displayed in the browser, but they can help document your 
