--- a/tab.html
+++ b/tab.html
@@ -4,6 +4,9 @@
 	<title>Purvesha Kshirsagar</title>
 </head>
 <style type="text/css">
+	body{
+		background-color: grey;
+	}
 	.topright {
   position: absolute;
   top: 8px;
