--- a/list.html
+++ b/list.html
@@ -2,6 +2,25 @@
 <html>
 <head>
 	<title>Purvesha Kshirsagar</title>
+	<style type="text/css">
+		ul{
+			padding: 20px;
+			list-style-position: inside;
+		}
+		ol{
+			background: #ff9999;
+			padding: 20px;
+		}
+		ol li{
+			background: #ffe5e5;
+			padding: 5px;
+			margin-left: 35px;
+		}
+		ul li{
+			background: #cce5ff;
+			margin: 5px;
+		}
+	</style>
 </head>
 <body>
 	<h3>Courses attended:</h3>
@@ -35,5 +54,6 @@
 			</ul>
 		</li>
 	</ol>
+	<p>Want to opt any course? <a href="form.html">Register</a></p>
 </body>
 </html>
