--- a/tab.html
+++ b/tab.html
@@ -10,6 +10,7 @@
 	#title{
 		color: red;
 		font-size: 40px;
+		padding: 25px 50px 75px 100px;
 	}
 	.topright {
   position: absolute;
@@ -35,6 +36,9 @@
   }
   table{
   	border-spacing: 5px;
+  }
+  table.outset{
+  	outline-style: outset;
   }
   #t01{
   	background-color: #f1f1c1;
