--- a/list.html
+++ b/list.html
@@ -20,9 +20,21 @@
 			background: #cce5ff;
 			margin: 5px;
 		}
+		body{
+			background-image: url(it.jpg);
+			align: left;
+		}
+		#nav{
+			float:right;
+		}
 	</style>
 </head>
 <body>
+	<ul id="nav">
+		<li><a href="list.html">Home</a></li>
+		<li><a href="form.html">Registration</a></li>
+		<li><a href="tab.html">Details</a></li>
+	</ul>
 	<h3>Courses attended:</h3>
 	<ol>
 		<li>
