--- a/tab.html
+++ b/tab.html
@@ -10,6 +10,7 @@
 	#title{
 		color: red;
 		font-size: 40px;
+		padding: 25px 50px 75px 100px;
 	}
 	.topright {
   position: absolute;
@@ -19,12 +20,15 @@
   height:20%;
   width:20%;
 }
+  caption{
+  	display: none;
+  }
   img{
   	height: 10%;
   	width:10%;
   }
   table,th,td{
-  	border: 1px solid black;
+  	border: 2px solid black;
   	border-collapse: collapse;
   }
   th,td{
@@ -35,6 +39,10 @@
   }
   table{
   	border-spacing: 5px;
+  }
+  table{
+  	outline-style: outset;
+  	outline-color: blue;
   }
   #t01{
   	background-color: #f1f1c1;
@@ -59,6 +67,9 @@
   	background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
   	font-family: serif;
   	font-style: italic;
+  }
+  iframe{
+  	margin: 25px;
   }
 </style>
 <body>
