--- a/list.html
+++ b/list.html
@@ -28,6 +28,7 @@
 			float:right;
 		}
 	</style>
+	<script type="text/javascript" src="first_js.js"></script>
 </head>
 <body>
 	<ul id="nav">
@@ -67,5 +68,6 @@
 		</li>
 	</ol>
 	<p>Want to opt any course? <a href="form.html">Register</a></p>
+	<p>Know more about Javascript<input type="button" value="Click" onclick="message()"></p>
 </body>
 </html>
