--- a/list.html
+++ b/list.html
@@ -28,7 +28,12 @@
 			float:right;
 		}
 	</style>
-	<script type="text/javascript" src="first_js.js"></script>
+	<script type="text/javascript" src="first_js.js">
+		var str1="Hii";
+		console.log(str1);
+		var str2="My Name is";
+		console.log(str2);
+	</script>
 </head>
 <body>
 	<ul id="nav">
