--- a/list.html
+++ b/list.html
@@ -33,6 +33,8 @@
 		console.log(str1);
 		var str2="My Name is";
 		console.log(str2);
+		var arr=[1,2,3,4,5];
+		arr[3].toString();
 	</script>
 </head>
 <body>
